--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "build": "npm install && npm install --prefix frontend && npm run boild --prefix backend",
-    "start": "node index.js"
+    "dev": "nodemon backend/index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix backend",
+    "start": "node backend/index.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
